Fix Install App -> btn not showing

--- a/css/pwa.css
+++ b/css/pwa.css
@@ -23,5 +23,5 @@
 .install-pwa-wrapper img {
     max-width: 100%;
     border-radius: 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.6);
 }
